# Pose-estimation-comparison

./: Thesis_Masters.pptx  catkin_thesis.kdev4
.kdev4/: catkin_thesis.kdev4
devel/: .catkin  .rosinstall  setup.sh
devel/include/marker_msgs/: Fiducial.h  FiducialDetection.h  Marker.h  MarkerDetection.h  MarkerStamped.h  MarkerWithCovariance.h  MarkerWithCovarianceArray.h  MarkerWithCovarianceStamped.h
devel/include/tuw_aruco/: ArUcoConfig.h
devel/include/tuw_checkerboard/: CheckerboardDetectionConfig.h
devel/include/tuw_ellipses/: EllipsesDetectionConfig.h
devel/include/tuw_marker_pose_estimation/: MarkerMapPoseEstimationConfig.h  MarkerPoseEstimationConfig.h
devel/include/visp_hand2eye_calibration/: TransformArray.h  compute_effector_cameraRequest.h  compute_effector_cameraResponse.h  compute_effector_camera_quickRequest.h  compute_effector_camera_quickResponse.h  getposesAction.h  getposesActionFeedback.h  getposesActionGoal.h  getposesActionResult.h  getposesFeedback.h  getposesGoal.h  getposesResult.h  resetRequest.h  resetResponse.h
devel/lib/: libaruco.so.2.0.9
pose_estimation/: CMakeLists.txt
pose_estimation/data/: calib_points_EPNP_720p.yaml
pose_estimation/data/18122018/: calib_points_lb.yaml  calib_points_ru.yaml  lb.txt  ru.txt
pose_estimation/data/EPNP/1080p/: calib_points_EPNP_1080p.yaml  hand_eye_calib points_1080p
pose_estimation/data/EPNP/720p/: hand_eye_calibpoints_720p
pose_estimation/data/EPNP/HD2k_2208x1242/: calib_points_EPNP_HD2K.yaml
pose_estimation/data/Iterative/1080p/: hand_eye_calib_iterative_1080p
pose_estimation/data/Iterative/720p/: hand_eye_calib_iterative_720p
pose_estimation/data/P3P/: P3P_modifiedrot.txt
pose_estimation/data/P3P/1080p/: calib_points_P3P_1080p.yaml
pose_estimation/data/P3P/720p/: calib_points_P3P_720p.yaml
pose_estimation/data/P3P/Hd2K/: hand_eye_calib_hd2k
pose_estimation/data/docs and final values/: workflow.txt
pose_estimation/data_final/: aruco1080epnp.yaml  aruco_p3p720.yaml  arucoepnp2k.yaml  arucoiter1080.yaml  arucop3ppose2.yaml  calib_points.yaml  ellipse2kiter.yaml
pose_estimation/data_final/EPNP/aruco/position1/1080p/: 1080png
pose_estimation/data_final/EPNP/aruco/position2/: calibrated
pose_estimation/data_final/Iterative/aruco/position2/: arucopose2iter.yaml  calibrated
pose_estimation/data_final/Iterative/ellipse/position1/1080p/: ellipse1080iter.yaml
pose_estimation/data_final/Iterative/ellipse/position1/2k/: calibrated
pose_estimation/data_final/Iterative/ellipse/position1/720p/: calibrated
pose_estimation/data_final/P3P/aruco/position1/720p/: calibrated
pose_estimation/data_final/P3P/aruco/position2/: calibrated.txt
pose_estimation/data_final/aruco/EPNP/aruco/position1/2k/: calibrated
pose_estimation/data_final/aruco/Iterative/aruco/position1/720p/: calibrated
pose_estimation/data_final/aruco/P3P/aruco/position1/2k/: calibrated
pose_estimation/launch/: aruco_pub.launch  epnp_1080p.launch  epnp_720p.launch  epnp_hd2k.launch  final.launch  iter_1080.launch  p3p_hd2k.launch
pose_estimation/scripts/: broadcast_frame.py  camera_info_splitter.py  epnp_720.py  get_points_client.py  iterative_1080p.py
pose_estimation/src/: track_checkerboard.cpp  track_checkerboard_copy.cpp  track_checkerboard_copy2.cpp  track_checkerboard_copy3.cpp  track_checkerboard_copy4.cpp  track_checkerboard_copy5.cpp  track_tcp.cpp
src/.kdev4/: src.kdev4
(+215 files in other folders)
